--- a/webapp/requirements.txt
+++ b/webapp/requirements.txt
@@ -1,36 +1,52 @@
 amqp==5.1.1
 asgiref==3.5.2
 async-timeout==4.0.2
+attrs==21.4.0
 Authlib==1.0.1
+autobahn==22.5.1
+Automat==20.2.0
 autopep8==1.6.0
 billiard==3.6.4.0
 celery==5.2.6
 certifi==2022.5.18
 cffi==1.15.0
+channels==3.0.4
 charset-normalizer==2.0.12
 click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
+constantly==15.1.0
 cryptography==37.0.2
+daphne==3.0.2
 Deprecated==1.2.13
 Django==4.0.4
 gunicorn==20.1.0
+hyperlink==21.0.0
 idna==3.3
+incremental==21.3.0
 kombu==5.2.4
 packaging==21.3
 prompt-toolkit==3.0.29
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycodestyle==2.8.0
 pycparser==2.21
+pyOpenSSL==22.0.0
 pyparsing==3.0.9
 python-dotenv==0.20.0
 pytz==2022.1
 redis==4.3.1
 requests==2.27.1
+service-identity==21.1.0
 six==1.16.0
 sqlparse==0.4.2
 toml==0.10.2
+Twisted==22.4.0
+txaio==22.2.1
+typing-extensions==4.2.0
 urllib3==1.26.9
 vine==5.0.0
 wcwidth==0.2.5
 wrapt==1.14.1
+zope.interface==5.4.0
